[package]
name = "cmim"
version = "0.2.1"
description = "Move your data to interrupt context"
repository = "https://github.com/jamesmunns/cmim"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"
readme = "README.md"

categories = [
    "embedded",
    "no-std",
    "memory-management",
]
license = "MIT OR Apache-2.0"

[dependencies]
bare-metal = "0.2"
cortex-m   = "0.6"

[dev-dependencies]
panic-halt   = "0.2"
cortex-m-rt  = "0.6.10"
nb           = "0.1.2"
heapless     = "0.5.1"
embedded-hal = "0.2"

[dev-dependencies.dwm1001]
version = "0.3.0"
features = ["dev", "rt"]

[package.metadata.docs.rs]
all-features = true
